# bayes_cn_hfs

./: .gitattributes  .gitignore  .readthedocs.yaml  Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
bayes_cn_hfs/: __init__.py  _version.py  cn_model.py  cn_ratio_anomaly_iram_model.py  cn_ratio_anomaly_model.py  cn_ratio_lte_model.py  cn_ratio_model.py  hfs_anomaly_iram_model.py  hfs_anomaly_model.py  hfs_lte_model.py  hfs_model.py  physics.py  utils.py
docs/: requirements.txt
docs/source/: bayes_cn_hfs.rst  conf.py  index.rst  modules.rst
docs/source/notebooks/: alma_data.ipynb  cn_model.ipynb  cn_model_anomalies.ipynb  cn_model_degeneracies.ipynb  cn_ratio_anomaly_model.ipynb  cn_ratio_lte_model.ipynb  cn_ratio_model.ipynb  data_13CN.tsv  data_CN.tsv  hfs_anomaly_model.ipynb  hfs_lte_model.ipynb  hfs_model.ipynb  iram_data.ipynb  iram_data.pkl  iram_data_nlte.ipynb  real_data.ipynb
tests/: test_cn_model.py  test_cn_ratio_anomaly_iram_model.py  test_cn_ratio_anomaly_model.py  test_cn_ratio_model.py  test_hfs_anomaly_model.py  test_hfs_model.py  test_physics.py  test_utils.py
